[gd_scene load_steps=10 format=3 uid="uid://dag5ig35r5q3d"]

[ext_resource type="Script" uid="uid://unb2c67q1rw2" path="res://hud.gd" id="1_37p78"]
[ext_resource type="Texture2D" uid="uid://sh2jbewp38sd" path="res://resources/Assets/Tiles.png" id="2_64ctp"]
[ext_resource type="Texture2D" uid="uid://tanukigrj6sf" path="res://resources/Assets/diamonds_atlas_no_bg_1000x250.png" id="3_8sq4i"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_64ctp"]
content_margin_top = 7.0
content_margin_bottom = 7.0
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_37p78"]
bg_color = Color(0.96, 0.20736, 0.0192, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="AtlasTexture" id="AtlasTexture_8sq4i"]
atlas = ExtResource("2_64ctp")
region = Rect2(244.634, 337.683, 6.7881, 11.0014)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_640wx"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="AtlasTexture" id="AtlasTexture_a2258"]
atlas = ExtResource("3_8sq4i")
region = Rect2(0, 0, 244.041, 250)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8sq4i"]
bg_color = Color(0.0123869, 0.654545, 0.870492, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_37p78")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = -1
anchor_left = 0.0243056
anchor_top = 0.0246914
anchor_right = 0.411458
anchor_bottom = 0.103395
offset_left = -5.0
offset_top = -5.0
offset_right = -5.0
offset_bottom = -5.0
metadata/_edit_use_anchors_ = true

[node name="HealthLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Health"
horizontal_alignment = 1

[node name="HealthBar" type="ProgressBar" parent="VBoxContainer"]
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxFlat_64ctp")
theme_override_styles/fill = SubResource("StyleBoxFlat_37p78")
value = 100.0
rounded = true
show_percentage = false

[node name="Coins" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="CoinsTextureRect" type="TextureRect" parent="VBoxContainer/Coins"]
layout_mode = 2
texture = SubResource("AtlasTexture_8sq4i")

[node name="CoinsLabel" type="Label" parent="VBoxContainer/Coins"]
layout_mode = 2
text = "x23"

[node name="Diamonds" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/Diamonds"]
layout_mode = 2
size_flags_stretch_ratio = 3.02
theme_override_styles/panel = SubResource("StyleBoxFlat_640wx")

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/Diamonds/PanelContainer"]
layout_mode = 2
texture = SubResource("AtlasTexture_a2258")
expand_mode = 2

[node name="DiamondsLabel" type="Label" parent="VBoxContainer/Diamonds"]
layout_mode = 2
text = " x 34"

[node name="Armor" type="VBoxContainer" parent="."]
anchors_preset = -1
anchor_left = 0.0243056
anchor_top = 0.0246914
anchor_right = 0.411458
anchor_bottom = 0.103395
offset_left = 658.0
offset_top = -5.0
offset_right = 658.0
offset_bottom = -5.0
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="Armor"]
layout_mode = 2
text = "Armor"
horizontal_alignment = 1

[node name="ArmorBar" type="ProgressBar" parent="Armor"]
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxFlat_64ctp")
theme_override_styles/fill = SubResource("StyleBoxFlat_8sq4i")
value = 100.0
rounded = true
show_percentage = false
